--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  google_sign_in: ^5.0.5
+  cloud_firestore: ^2.4.0
+  firebase_auth: ^3.0.1
 
 dev_dependencies:
   flutter_test:
