--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter_riverpod: ^0.14.0+3
   font_awesome_flutter: ^9.1.0
   provider: ^6.0.0-dev
+  google_maps_flutter: ^2.0.6
+  http: ^0.13.3
+  json_serializable: ^4.1.0
 
 dev_dependencies:
   flutter_test:
