--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   http: ^0.13.3
   json_serializable: ^4.1.0
   location: ^4.3.0
+  image_picker: ^0.8.2
 
 dev_dependencies:
   flutter_test:
